fix channel hover overlap

--- a/betterdiscord/app.css
+++ b/betterdiscord/app.css
@@ -392,8 +392,7 @@
 }
 
 .link__2ea32 {
-  padding: 6px 20px;
-  border-radius: 0;
+  padding: 4px 20px;
 }
 
 .modeUnreadImportant__2ea32 {
