--- a/src/theme/sidebar/_channels.scss
+++ b/src/theme/sidebar/_channels.scss
@@ -56,8 +56,7 @@
   left: 7px;
 }
 #{c(sidebar server channels link)} {
-  padding: 6px 20px;
-  border-radius: 0;
+  padding: 4px 20px;
 }
 
 #{c(sidebar server channels unread)} {
